--- a/HTML/profile/profile.html
+++ b/HTML/profile/profile.html
@@ -7,34 +7,41 @@
         * {
             margin: 0;
             padding: 0;
-            font: normal 12px '돋움';
+            font: normal 12px 'Arial';
         }
 
         ul, ol {list-style: none;}
         a {text-decoration: none; color: #111;}
         input, textarea {outline: none;}
 
-        main {width: 900px; margin-left: 500px; margin-top:20px;}
+        main {width: 1000px; margin-left: 500px; margin-top:20px;}
         main > section {width: 100%; }
         main > section > .myProfile {width: 100%; height: 200px; position: relative; display: block;}
-        main > section > div > .proPhoto {float: left; margin-left:100px; margin-right:100px; width: 200px;}
+        main > section > div > .proPhoto {float: left; margin-top: 20px; margin-left:100px; margin-right:100px; width: 200px;}
         main > section > div > .proPhoto > div > img {width: 150px;}
         main > section > .myProfile > .detail {float:left; width:500px;}
         main > section > div {display: block;}
-        main > section > .myList > .pic {float:left; overflow: hidden;}
+        main > section > .myList > .pic {float:left; margin: 5px; overflow: hidden;}
         main > section > .myList > .pic > a {display: block;} 
         main > section > .myList > .pic > a > img {max-width: 300px; max-height: 300px;}
-        main > section > .myProfile > .detail > .pTop {margin-top: 30px; position: relative; display: block;}
-        main > section > .myProfile > .detail > .pTop > .userName {float:left; padding:10px; font-size: 30px;}
+        main > section > .myProfile > .detail > .pTop {display: block; margin-top: 30px; position: relative; width: auto; height: 40px;}
+        main > section > .myProfile > .detail > .pTop > .userName {float:left; padding-right:15px; font-size: 24px;}
         main > section > .myProfile > .detail > .pTop > .button {
             margin: 2px;
             padding: 5px 5px;
             background: #e9e9e9;
             font-size: 15px;
-            top: 25px;
+            top: 10px;
             position: inherit;}
-        main > section > .myProfile > .detail > .pMiddle {display: block; margin: 1px;}
-        main > section > .myProfile > .detail > .pMiddle > li { width: 50px;}
+        main > section > .myProfile > .detail > .pMiddle {display: block; margin-top: 20px; width: 500px; height: 40px; overflow: hidden;}
+        main > section > .myProfile > .detail > .pMiddle > li {box-sizing: border-box; margin-right:35px; float: left; font-size: 16px; font-weight: bold;}
+        main > section > .myProfile > .detail > .pMiddle > li > span {font-size:15px; width: 100px; margin-right: 5px;}
+        main > section > .myProfile > .detail > .pAbout > .notice {font-size: 15px;}
+        main > section > .myList {margin-top: 50px;}
+        main > section > .myNav {border-top: 1px solid #e9e9e9; padding-top: 30px; width: 400px; margin-right: 300px; margin-left: 300px; text-align: center;}
+        main > section > .myNav > div {float: left; padding-left: 30px; padding-right: 30px;}
+        main > section > .myNav > div > a { color: #888;}
+        main > section > .myNav > div > a:hover {border-top: 1px solid #111; color: #111;}
   </style>
 </head>
 <body>
@@ -71,35 +78,40 @@
                     </p>
                 </div>
             </div>
+            <div class="myNav">
+                <div><a href="#">게시물</a></div>
+                <div><a href="#">릴스</a></div>
+                <div><a href="#">태그됨</a></div>
+            </div>
             <div class="myList">
                 <div class="pic">
                     <a href="#">
-                        <img src="./img/img01.jpg">
+                        <img src="./img/300x300-1.png">
                     </a>
                 </div>
                 <div class="pic">
                     <a href="#">
-                        <img src="./img/img01.jpg">
+                        <img src="./img/300x300-1.png">
                     </a>
                 </div>
                 <div class="pic">
                     <a href="#">
-                        <img src="./img/img01.jpg">
+                        <img src="./img/300x300-1.png">
                     </a>
                 </div>
                 <div class="pic">
                     <a href="#">
-                        <img src="./img/img01.jpg">
+                        <img src="./img/300x300-1.png">
                     </a>
                 </div>
                 <div class="pic">
                     <a href="#">
-                        <img src="./img/img01.jpg">
+                        <img src="./img/300x300-1.png">
                     </a>
                 </div>
                 <div class="pic">
                     <a href="#">
-                        <img src="./img/img01.jpg">
+                        <img src="./img/300x300-1.png">
                     </a>
                 </div>
             </div>
