--- a/HTML/chat/index.html
+++ b/HTML/chat/index.html
@@ -6,45 +6,32 @@
     <!--
         날짜 : 2023.02.28
         이름 : 이왕근
-        내용 : 메시지 화면 HTML 작업
+        내용 : 메시지 html 작업
     -->
+<style>
+   ._aa5b {
+    align-items: center;
+    border: 1px solid;
+    
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    font: inherit;
+    font-size: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 20px;
+    position: relative;
+    vertical-align: baseline;
+    width: 100%;
+}
+
+</style>
 </head>
 <body>
-    <div style="height: 100%; width: 100%;"></div>
-    <section class="x78zum5 xdt5ytf x1iyjqo2 x6ikm8r x5yr21d xh8yej3">
-        <div class="xnz67gz x78zum5 xdt5ytf x1iyjqo2 x5yr21d xmz0i5r">
-            <div class="_ab8w  _ab94 _ab99 _ab9f _ab9m _ab9o _abcm">
-                <div class="_aa5b">
-                    <div class="_ab8j _ab8l _ab8w  _ab94 _ab99 _ab9h _ab9k _ab9o _ab9s _abcm"
-                    style="height: 100%; width: 100%; max-width: 935px;">
-                        <div class="_aa5c">
-                            <div class="_aa4j">
-                                <div class="_aa4k">
-                                    <div class="_aa4m _aa4n"></div>
-                                    <div class="_aa4o">
-                                        <div class="_ab8w  _ab94 _ab99 _ab9f _ab9m _ab9p _abcm" style="width: 100%;">
-                                            <button aria-label="계정 전환 - dfafdfa1234" class="_acan _acao _acas _aj1-" type="button" tabindex="0">
-                                                <div class="_ab8w  _ab94 _ab97 _ab9h _ab9k _ab9p _abcm" style="width: 100%;">
-                                                    <div class="_abyj">
-                                                        <div class="_aacl _aacp _aacw _aacx _aada _aade">dfafdfa1234
-                                                        </div>
-                                                    </div>
-                                                    <div class="_ab8w  _ab94 _ab99 _ab9f _ab9m _ab9p  _ab9y _aba8 _abcm">
-                                                        <span style="display: inline-block; transform: rotate(180deg);">
-                                                            <svg aria-label="아래쪽 V자형 아이콘" class="_ab6-" color="rgb(38, 38, 38)" fill></svg>
-                                                        </span>
-                                                    </div>
-                                                </div>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+   <div class="_aa5b">
+
+   </div>
 </body>
 </html>
