--- a/HTML/member/register.html
+++ b/HTML/member/register.html
@@ -39,7 +39,7 @@
                                 <div class="form-group">
                                     <div class="animate-input">
                                         <span>
-                                            휴대폰 번호 또는 이메일 주소
+                                            이메일 주소
                                         </span>
                                         <input type="text">
                                     </div>
@@ -61,16 +61,16 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                <div class="animate-input">
-                                    <span>
-                                        비밀번호
-                                    </span>
-                                    <input type="password">
-                                    <button>비밀번호 표시</button>
+                                    <div class="animate-input">
+                                        <span>
+                                            비밀번호
+                                        </span>
+                                        <input type="password">
+                                        <button>비밀번호 표시</button>
+                                    </div>
                                 </div>
-                            </div>
                                 <div class="btn-group">
-                                    <button type="submit" class="btn-login" id="signin-btn" onclick="location.href='.birth.html'" disabled>
+                                    <button type="submit" class="btn-login" id="signin-btn" onclick="location.href='./birth.html'" disabled>
                                         가입
                                     </button>
                                 </div>
