--- a/HTML/chat/index.html
+++ b/HTML/chat/index.html
@@ -1340,8 +1340,102 @@ html {height: 100%;}
 }
 
 .ab_00_{
-    background-color: rgb(var(--ig-primary-background));
-    --ig-primary-background: 255, 255, 255;
+    display: flex;
+    align-content: stretch;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex: 0 0 auto;
+    padding-left: calc(var(--base-unit) * 6);
+    padding-right: calc(var(--base-unit) * 6);
+    padding-bottom: calc(var(--base-unit) * 6);
+    padding-top: calc(var(--base-unit) * 6);
+    --base-unit: 4px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+._ab6- {
+    display: block;
+    position: relative;
+}
+
+.ab_01_{
+    display: flex;
+    align-content: stretch;
+    align-items: stretch;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex: 0 0 auto;
+    margin-top: calc(var(--base-unit) * 4);
+    --base-unit: 4px;
+    box-sizing: border-box;
+      position: relative;
+}
+
+.ab_02_{
+    display: block;
+    overflow-x: visible;
+    overflow-y: visible;
+    position: relative;
+    max-width: 100%;
+    min-width: 0;
+    white-space: pre-line;
+    word-break: break-word;
+    word-wrap: break-word;
+    font-family: var(--font-family-system);
+    --font-family-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    font-size: var(--system-20-font-size);
+    --system-20-font-size: 20px;
+    font-weight: 400;
+    color: rgb(var(--ig-primary-text));
+    --ig-primary-text: 38, 38, 38;
+    text-align: center;
+    margin-top: 0!important;
+    margin-right: 0!important;
+    margin-bottom: 0!important;
+    margin-left: 0!important;
+}
+.x4zkp8e::before {
+    margin-top: -4px;
+}
+.x1fgarty::before {
+    display: block;
+}
+.x1cpjm7i::before {
+    content: "";
+}
+.x1943h6x::before {
+    height: 0;
+}
+.xw06pyt::after {
+    margin-bottom: -6px;
+}
+.xhkezso::after {
+    display: block;
+}
+.x1s928wv::after {
+    content: "";
+}
+.x1gmr53x::after {
+    height: 0;
+}
+
+.ab_03_{
+    display: flex;
+    align-content: stretch;
+    align-items: stretch;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex: 0 0 auto;
+    margin-top: calc(var(--base-unit) * 4);
+    --base-unit: 4px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.ab_04_{
+  
 }
 _acas _aa02//////////////////////////////////////////////////
 </style>
@@ -1862,7 +1956,7 @@ _acas _aa02//////////////////////////////////////////////////
                         <polygon fill="none" points="47.254 73.123 71.376 31.998 24.546 32.002 41.448 48.805 47.254 73.123" stroke="currentColor" stroke-linejoin="round" stroke-width="2"></polygon>
                     </svg>
                     <div class="ab_01_">
-                        <span class="ab_02_" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:25px;">내 메시지</span>
+                        <span class="ab_02_ x4zkp8e x1fgarty x1cpjm7i x1943h6x xw06pyt xhkezso x1s928wv x1gmr53x" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:25px;">내 메시지</span>
                     </div>
                     <div class="ab_03_">
                         <div class="ab_04_">
