--- a/HTML/member/register.html
+++ b/HTML/member/register.html
@@ -39,7 +39,7 @@
                                 <div class="form-group">
                                     <div class="animate-input">
                                         <span>
-                                            이메일 주소
+                                            아이디 입력
                                         </span>
                                         <input type="text">
                                     </div>
@@ -55,7 +55,7 @@
                                 <div class="form-group">
                                     <div class="animate-input">
                                         <span>
-                                            사용자 이름
+                                            이메일 입력
                                         </span>
                                         <input type="text">
                                     </div>
@@ -73,6 +73,9 @@
                                     <button type="submit" class="btn-login" id="signin-btn" onclick="location.href='./birth.html'" disabled>
                                         가입
                                     </button>
+                                </div>
+                                <div class="checking">
+                                    <div>이미 가입되어있는 아이디입니다.</div>
                                 </div>
                             </form>                          
                         </div>
