--- a/HTML/member/login.html
+++ b/HTML/member/login.html
@@ -11,6 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/member.css">
 </head>
+<!--
+    날짜 : 2023/03/03
+    이름 : 김진우
+    내용 : 로그인 화면
+-->
 <body>
     <div class="container">
         <div class="main-container">
@@ -94,6 +99,7 @@
                 </div>
             </div>
         </div>
+        <!-- footer -->
         <div class="footer">
             <div class="links">
                 <a href="#">Meta</a>
