--- a/HTML/member/register.html
+++ b/HTML/member/register.html
@@ -11,7 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/member.css">
 </head>
+<!--
+    날짜 : 2023/03/03
+    이름 : 김진우
+    내용 : 회원가입 화면
+-->
 <body>
+<header></header>
+<!-- 본문 시작 -->
 <main class="member">
     <div class="container">
         <div class="main-container">
@@ -86,7 +93,6 @@
                             <a href="./login.html">로그인</a>
                         </p>
                     </div>
-
                     <div class="app-download">
                         <p>앱을 다운로드 하세요.</p>
                         <div class="store-link">
@@ -101,6 +107,7 @@
                 </div>
             </div>
         </div>
+
         <div class="footer">
             <div class="links">
                 <a href="#">Meta</a>
