--- a/HTML/aside.html
+++ b/HTML/aside.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram</title>
-    <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
-    />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
     <link
             href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
             rel="stylesheet"/>
@@ -592,7 +590,7 @@
       <a href="">로그아웃</a>
     </div>
 
-    <!--게시글 작성 선택시 모달 팝업(</body>바깥부분에배치)-->
+    <!--게시글 작성 선택시 모달 팝업(바깥부분에배치)-->
   <div id="modal_add_feed" class="modal modal_overlay">
     <div class="modal_window">
         <div class="modal_title">
@@ -609,7 +607,6 @@
             <label for="file_upload">컴퓨터에서 선택</label>
             <input type="file" id="file_upload" accept="image/*" required multiple/>
           </button>
-
         </div>
     </div>
 </div>
@@ -644,8 +641,8 @@
                 </div>
             </div>
         </div>
-
+    
     </div>
-</div>
+  </div>
   </body>
 </html>
