--- a/HTML/chat/index.html
+++ b/HTML/chat/index.html
@@ -1198,6 +1198,9 @@ html {height: 100%;}
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    background-color: rgb(var(--ig-primary-button));
+    --ig-primary-button: 0, 149, 246;
+    border: none;
 }
 
 .aa_03_{
@@ -1435,7 +1438,76 @@ html {height: 100%;}
 }
 
 .ab_04_{
-  
+    font-family: var(--font-family-system);
+    --font-family-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    font-size: var(--system-14-font-size);
+    --system-14-font-size: 14px;
+    line-height: var(--system-14-line-height);
+    --system-14-line-height: 18px;
+    margin: -3px 0 -4px;
+    font-weight: var(--font-weight-system-regular);
+    --font-weight-system-regular: 400;
+    color: rgb(var(--ig-secondary-text));
+    --ig-secondary-text: 142, 142, 142;
+    display: block;
+    text-align: center;
+}
+
+.ab_05_{
+    display: flex;
+    align-content: stretch;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex: 0 0 auto;
+    margin-top: calc(var(--base-unit) * 6);
+    --base-unit: 4px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.ab_06_{
+    display: flex;
+    align-content: stretch;
+    align-items: stretch;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex: 0 0 auto;
+    padding-left: var(--base-unit);
+    padding-right: var(--base-unit);
+    padding-bottom: var(--base-unit);
+    padding-top: var(--base-unit);
+    --base-unit: 4px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.ab_07_{
+    -webkit-appearance: none;
+    background: none;
+    border: none;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: block;
+    font-family: var(--font-family-system);
+    font-size: 14px;
+    font-weight: var(--font-weight-system-semibold);
+    padding: 7px 16px!important;
+    pointer-events: auto;
+    text-align: center;
+    text-overflow: ellipsis;
+    text-transform: inherit;
+    -webkit-user-select: none;
+    width: auto;
+    border: none;
+    border-radius: 8px;
+    color: rgb(var(--web-always-white));
+    --web-always-white: 255, 255, 255;
+    position: relative;
+    background-color: rgb(var(--ig-primary-button));
+    --ig-primary-button: 0, 149, 246;
+    border: none;
+    text-align: center;
 }
 _acas _aa02//////////////////////////////////////////////////
 </style>
